[project]
name = "leetcode-template"
version = "1.0.0"
description = "Template for local leetcode problem solving"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.3.4"]

[tool.pytest.ini_options]
pythonpath = ["."]
python_files = ["*.py"]
python_functions = ["test*"]
